Services page added

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -14,14 +14,11 @@ body {
 header {
   /* background: #fff; */
   background-color: rgb(133, 101, 133);
-  /* position: fixed;
-  top: 0;
-  width: 100%;
-  z-index: 1; */
+  width: 100%; 
 }
 header .container {
   max-width: 1400px;
-  margin: 0 auto;
+  margin: 0 ;
   padding: 10px 20px;
   display: flex;
   align-items: center;
@@ -31,12 +28,6 @@ header a {
   color: #333;
   text-decoration: none;
 }
-.pages{
-  max-width: 1400px;
-  padding: 20px;
-  margin: 0 auto;
-}
-
 /* navbar */
 nav {
   display: flex;
