--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -19,10 +19,18 @@ header {
 header .container {
   max-width: 1400px;
   margin: 0 ;
-  padding: 10px 20px;
+  padding: 15px 20px;
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+.containertitle{
+  font-size: 30px;
+  color:#fff;
+  font-weight: 500;
+  margin-right: 0px;
+  margin-left: 0px;
+  padding: none;
 }
 header a {
   color: #333;
@@ -58,25 +66,34 @@ nav a{
 .search{
     width: 40%;
     border-style:  ridge;
-    border-radius: 0.75rem;
-    padding-left: 1%;
+    border-radius: 1.5rem;
+    padding-left: 0.5%;
+    padding-bottom: 0.6%;
     background-color: white;
     border: none;
+    margin-left: 1%;
+    font-size: 70%;
+}
+.searchhereicon{
+  display: inline-flex;
+  padding-top: 3%;
+  margin:0;
 }
 .searchBar
 {
     width: 90%;
-    font-size: 1.25rem;
-    padding: 0.5% 1%;
-    border-radius: 2rem;
+    font-size: 1.05rem;
+    font-weight:400;
+    padding: 0% 0%;
+    border-radius: 1.25 rem;
     border: 0;
+    margin-top:0;
+    margin-bottom: 0;
     margin-left: 3%;
     outline: none;
 }
-.searchIcon
-{
-    margin-right: 0%;
-    margin-left: 10%;
+.navend{
+  padding-bottom:5%;
 }
 .swiper {
   width: 100%;
